# ccw

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
.cargo/: config.toml
.opencode/agents/: ifc-answer-42.md  ifc-explorer-strict.md  ifc-explorer.md  ifc-playbook-cypher-only.md  ifc-readonly-cypher-only.md
.opencode/tool-helpers/: ifc_quantity_section_helpers.ts  ifc_scope_helpers.ts  ifc_search_helpers.ts
.opencode/tools/: compat.ts  ifc.ts
agent/: README.md
agent/agents/: ifc-explorer-strict.md  ifc-explorer.md
agent/ifc/: README.md
agent/ifc/schemas/ifc2x3_tc1/: agent-query-playbook.json  agent-reference.json  agent-relation-reference.json
agent/ifc/schemas/ifc4/: agent-query-playbook.json  agent-reference.json  agent-relation-reference.json
agent/ifc/schemas/ifc4x3_add2/: agent-query-playbook.json  agent-reference.json  agent-relation-reference.json
agent/opencode/: README.md
crates/cc-w-backend/: Cargo.toml
crates/cc-w-backend/src/: lib.rs
crates/cc-w-db/: Cargo.toml
crates/cc-w-db/src/: lib.rs
crates/cc-w-kernel/: Cargo.toml
crates/cc-w-kernel/src/: lib.rs
crates/cc-w-platform-headless/: Cargo.toml
crates/cc-w-platform-headless/src/: lib.rs  main.rs  snapshot.rs
crates/cc-w-platform-headless/tests/: e2e_render_paths.rs  snapshots.rs
crates/cc-w-platform-native/: Cargo.toml
crates/cc-w-platform-native/src/: egui_painter.rs  main.rs
crates/cc-w-platform-web/: Cargo.toml
crates/cc-w-platform-web/src/: lib.rs
crates/cc-w-platform-web/tests/: opencode_security.rs
crates/cc-w-platform-web/web/: index.html  package-lock.json  package.json  playwright.annotation.config.cjs
crates/cc-w-platform-web/web/electron/: main.cjs  preload.cjs
crates/cc-w-platform-web/web/js/: app.js  theme-boot.js
crates/cc-w-platform-web/web/js/agent/: actions.js  agent-terminal.js  client.js
crates/cc-w-platform-web/web/js/graph/: graph-helpers.js  graph-layout.js  graph-mapping.js  graph-shell.js
crates/cc-w-platform-web/web/js/net/: http.js
crates/cc-w-platform-web/web/js/semantic/: outliner-model.mjs  outliner-model.test.mjs  properties.js
crates/cc-w-platform-web/web/js/state/: app-state.js
crates/cc-w-platform-web/web/js/terminal/: ansi.js  line-terminal.js  repl-controller.js  transcript-renderer.js
crates/cc-w-platform-web/web/js/ui/: app-shell.js  balloon-controller.js  balloon.js  outliner.js  panels.js  settings-menu.js
crates/cc-w-platform-web/web/js/util/: object.js
crates/cc-w-platform-web/web/js/viewer/: path-annotations.mjs  path-annotations.test.mjs  profile-picker.js  resource-picker.js  resource.js  viewer-api.js
crates/cc-w-platform-web/web/smoke/: state-contract-smoke.mjs  state-smoke.mjs
crates/cc-w-platform-web/web/styles/: chrome.css  graph.css  layout.css  outliner.css  properties.css  terminal.css  tokens.css
crates/cc-w-platform-web/web/tests/: path-annotations.spec.cjs
crates/cc-w-prepare/: Cargo.toml
crates/cc-w-prepare/src/: lib.rs
crates/cc-w-render/: Cargo.toml
crates/cc-w-render/src/: annotation_overlay.rs  lib.rs  mesh_edges.rs  profile.rs  text_overlay.rs
crates/cc-w-render/visual/text-overlay/: index.html
crates/cc-w-runtime/: Cargo.toml
crates/cc-w-runtime/src/: lib.rs
crates/cc-w-scene/: Cargo.toml
crates/cc-w-scene/src/: lib.rs
crates/cc-w-text/: Cargo.toml
crates/cc-w-text/src/: lib.rs
crates/cc-w-types/: Cargo.toml
crates/cc-w-types/src/: lib.rs
crates/cc-w-types/tests/: workspace_vecmath_policy.rs
crates/cc-w-velr/: Cargo.toml
crates/cc-w-velr/src/: lib.rs
docs/: ai-agent-integration.md  architecture.md  frontend-backend-migration-sweep.md  frontend-backend-split.md  generic-geometry-primitives.md  ifc-reference-view-geometry.md  ifc-rv-implementation-plan.md  ontology-neutral-renderer-refactor.md  rendering-profiles.md  scene-annotations.md  sections-and-stations.md  state-management-implementation-plan.md  state-management.md  tessellation-strategy.md  velr-ifc-graphql-repro-memo.md  velr-ifc-import-artifact-policy-memo.md  velr-ifc-integration.md  velr-ifc-metadata-and-edges-memo.md  velr-ifc-relative-placement-memo.md  velr-ifc2x3-brep-extraction-memo.md  velr-ifc2x3-brep-query-planner-memo.md  velr-node-id-filter-memo.md
docs/agent/: ifc-exploration-playbook.md
fixtures/ifc/: README.md  openifcmodel-20210219-architecture.ifc
tools/opencode/: opencode.json  provider-whitelist.json  sync-agents.mjs
