[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.90"
version = "0.1.0"

[workspace.dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
egui = "0.33.0"
egui-winit = "0.33.0"
glam = { version = "0.32.1", features = ["bytemuck"] }
js-sys = "0.3.95"
pollster = "0.4.0"
png = "0.18.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
slotmap = "1.1.1"
smallvec = "1.15.1"
thiserror = "2.0.18"
velr = { path = "../../../velr/codex/velr-repo/rust/velr-rust-driver" }
velr-graphql-core = { path = "../../../velr/codex/velr-graphql/crates/velr-graphql-core" }
velr-graphql-managed = { path = "../../../velr/codex/velr-graphql/crates/velr-graphql-managed" }
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.68"
web-sys = { version = "0.3.95", features = ["console"] }
wgpu = "29.0.1"
winit = "0.30.13"

[patch.crates-io]
velr = { path = "../../../velr/codex/velr-repo/rust/velr-rust-driver" }
