[package]
name = "cc-w-render"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bytemuck.workspace = true
cc-w-types = { path = "../cc-w-types" }
glam.workspace = true
thiserror.workspace = true
wgpu.workspace = true

[dev-dependencies]
pollster.workspace = true
