[package]
name = "cc-w-render"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bytemuck.workspace = true
cc-w-text = { path = "../cc-w-text" }
cc-w-types = { path = "../cc-w-types" }
epaint_default_fonts = "0.33.3"
glam.workspace = true
thiserror.workspace = true
wgpu.workspace = true

[dev-dependencies]
png.workspace = true
pollster.workspace = true
